# rm_controllers

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .travis.yml  CMakeLists.txt  Doxyfile  README.md  package.xml  rm_chassis_controllers_plugins.xml  rm_gimbal_controllers_plugins.xml  rm_orientation_controllers_plugins.xml  rm_shooter_controllers_plugins.xml  robot_state_controller_plugin.xml
gpio_controller/: CHANGELOG.rst  CMakeLists.txt  gpio_controller_plugins.xml  package.xml
gpio_controller/config/: gpio_controller.yaml
gpio_controller/include/gpio_controller/: gpio_controller.h
gpio_controller/launch/: gpio_controller.launch
gpio_controller/src/: gpio_controller.cpp
gpio_controller/test/: gpio_controller.launch
gpio_controllers/: CMakeLists.txt  gpio_controllers_plugins.xml  package.xml
gpio_controllers/include/gpio_controllers/: gpio_controllers.h
gpio_controllers/src/: gpio_controllers.cpp
imu_filter_controllers/: CHANGELOG.rst  CMakeLists.txt  imu_filter_controllers_plugins.xml  package.xml
imu_filter_controllers/config/: complementary_controller.yaml  madgwick_controller.yaml
imu_filter_controllers/launch/: load_controllers.launch
imu_filter_controllers/src/: complementary_controller.cpp  imu_filter_base.cpp  madgwick_controller.cpp
imu_filter_controllers/test/: test_two_controlller.launch
joint_mime_controller/: CMakeLists.txt  joint_mime_controller_plugins.xml  package.xml
joint_mime_controller/config/: mime_config_template.yaml  temple.yaml
joint_mime_controller/src/: joint_mime_controller.cpp
mimic_joint_controller/: CHANGELOG.rst  CMakeLists.txt  mimic_joint_controller_plugins.xml  package.xml
mimic_joint_controller/config/: mimic_config_template.yaml
mimic_joint_controller/src/: mimic_joint_controller.cpp
multi_dof_controller/: CMakeLists.txt  multi_dof_controller_plugins.xml  multi_dof_controlller_plugins.xml  package.xml
multi_dof_controller/include/: multi_dof_controller.h
multi_dof_controller/src/: multi_dof_controller.cpp
rm_calibration_controllers/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  rm_calibration_controllers_plugins.xml
rm_calibration_controllers/config/: calibration_config_template.yaml  calibration_template.yaml  hero.yaml  sentry.yaml  standard4.yaml
rm_calibration_controllers/src/: calibration_base.cpp  differential_calibration_controller.cpp  gpio_calibration_base.cpp  gpio_calibration_controller.cpp  hall_switch_calibration_controller.cpp  joint_calibration_controller.cpp  mechanical_calibration_controller.cpp
rm_chassis_controllers/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  rm_chassis_controllers_plugins.xml
rm_chassis_controllers/cfg/: LQRWeight.cfg  PowerLimit.cfg  QR.cfg
rm_chassis_controllers/config/: auto.yaml  balance.yaml  engineer.yaml  hero.yaml  localization.yaml  sentry.yaml  standard3.yaml  standard4.yaml  standard5.yaml  template_omni.yaml  template_reaction_wheel.yaml
rm_chassis_controllers/include/rm_chassis_controllers/: balance.h  (+8 more)
rm_chassis_controllers/launch/: load_controllers.launch
rm_chassis_controllers/src/: active_suspension.cpp  balance.cpp  chassis_base.cpp  mecanum.cpp  omni.cpp  reaction_wheel.cpp  sentry.cpp  swerve.cpp
rm_chassis_controllers/test/: balance.yaml  load_controllers.launch  load_vmc_controller.launch  mecanum.yaml  template_reaction_wheel.yaml  vmc_controller.yaml
rm_controllers/: CHANGELOG.rst  CMakeLists.txt  package.xml
rm_gimbal_controllers/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  rm_gimbal_controllers_plugins.xml
rm_gimbal_controllers/cfg/: BulletSolver.cfg  Gimbal.cfg  GimbalBase.cfg
rm_gimbal_controllers/config/: gimbal_config_template.yaml  hero.yaml  sentry.yaml  standard3.yaml  standard4.yaml  standard5.yaml
rm_gimbal_controllers/launch/: load_controllers.launch
rm_gimbal_controllers/src/: bullet_solver.cpp  feedforward.cpp  gimbal_base.cpp  moving_average_filter.cpp  standard.cpp
rm_gimbal_controllers/test/: engineer.yaml  gimbal_config_template.yaml  load_controllers.launch  standard5.yaml
rm_orientation_controller/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  rm_orientation_controller_plugin.xml
rm_orientation_controller/config/: hero.yaml  standard3.yaml  standard4.yaml  standard5.yaml
rm_orientation_controller/launch/: load_controllers.launch
rm_orientation_controller/src/: orientation_controller.cpp
rm_orientation_controller/test/: load_controllers.launch  orientation_config_template.yaml
rm_shooter_controllers/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  rm_shooter_controllers_plugins.xml
rm_shooter_controllers/cfg/: Shooter.cfg
rm_shooter_controllers/config/: hero.yaml  sentry.yaml  shooter_config_template.yaml  standard3.yaml  standard4.yaml  standard5.yaml
rm_shooter_controllers/launch/: load_controllers.launch
rm_shooter_controllers/src/: standard.cpp
rm_shooter_controllers/test/: load_controllers.launch  shooter_config_template.yaml
robot_state_controller/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
robot_state_controller/config/: config.yaml
robot_state_controller/launch/: load_controllers.launch
robot_state_controller/src/: robot_state_controller.cpp
robot_state_controller/test/: load_controllers.launch
tf_radar_controller/: CMakeLists.txt  package.xml  tf_radar_controller_plugins.xml
tf_radar_controller/config/: sentry.yaml
tf_radar_controller/launch/: load_controller.launch
tf_radar_controller/src/: tf_radar_controller.cpp
tof_radar_controller/: CHANGELOG.rst  CMakeLists.txt  package.xml  tof_radar_controller_plugins.xml
tof_radar_controller/config/: tof_config_template.yaml
tof_radar_controller/launch/: load_controller.launch
tof_radar_controller/src/: tof_radar_controller.cpp
tof_radar_controller/test/: load_controller.launch
tof_sensor_controller/: CMakeLists.txt  package.xml  tof_sensor_controller_plugins.xml
tof_sensor_controller/config/: sentry.yaml
tof_sensor_controller/launch/: load_controller.launch
tof_sensor_controller/src/: tof_sensor_controller.cpp
(+265 files in other folders)
