<?xml version="1.0"?>
<package format="2">
    <name>gpio_controllers</name>
    <version>0.1.3</version>
    <description>The gpio_controllers package</description>
    <maintainer email="muyuexin@todo.todo">muyuexin</maintainer>

    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>rm_msgs</depend>
    <depend>rm_common</depend>
    <depend>pluginlib</depend>
    <depend>roscpp</depend>
    <depend>roslint</depend>
    <depend>controller_interface</depend>
    <depend>hardware_interface</depend>
    <depend>realtime_tools</depend>

    <export>
        <controller_interface plugin="${prefix}/gpio_controllers_plugins.xml"/>
    </export>
</package>
