<?xml version="1.0"?>
<package format="2">
  <name>imu_filter_controllers</name>
  <version>0.1.2</version>
  <description>The imu_filter_controllers package</description>
  <maintainer email="ljq@todo.todo">ljq</maintainer>
  <license>TODO</license>

  <!-- buildtool_depend: dependencies of the build process -->
  <buildtool_depend>catkin</buildtool_depend>
  <!-- depend: build, export, and execution dependency -->
  <depend>roscpp</depend>
  <depend>roslint</depend>

  <depend>rm_msgs</depend>
  <depend>rm_common</depend>

  <depend>pluginlib</depend>
  <depend>imu_complementary_filter</depend>
  <depend>imu_filter_madgwick</depend>
  <depend>hardware_interface</depend>
  <depend>controller_interface</depend>
  <depend>realtime_tools</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <controller_interface plugin="${prefix}/imu_filter_controllers_plugins.xml"/>
  </export>
</package>
