<?xml version="1.0"?>
<package format="2">
  <name>joint_mime_controller</name>
  <version>0.0.0</version>
  <description>The joint_mime_controller package</description>
  <maintainer email="lvjunqi@todo.todo">ljq</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rm_msgs</depend>
  <depend>rm_common</depend>
  <depend>pluginlib</depend>
  <depend>roscpp</depend>
  <depend>roslint</depend>
  <depend>controller_interface</depend>
  <depend>hardware_interface</depend>
  <depend>realtime_tools</depend>


  <export>
    <controller_interface plugin="${prefix}/joint_mime_controller_plugins.xml"/>
  </export>
</package>
