<?xml version="1.0"?>
<package format="2">
    <name>rm_calibration_controllers</name>
    <version>0.1.11</version>
    <description>RoboMaster standard robot Gimbal controller</description>
    <maintainer email="liaoqiayuan@gmail.com">Qiayuan Liao</maintainer>
    <license>BSD</license>
    <author email="liaoqiayuan@gmail.com">Qiayuan Liao</author>

    <!-- buildtool_depend: dependencies of the build process -->
    <buildtool_depend>catkin</buildtool_depend>
    <!-- depend: build, export, and execution dependency -->
    <depend>roscpp</depend>

    <depend>rm_common</depend>

    <depend>controller_interface</depend>
    <depend>effort_controllers</depend>

    <export>
        <controller_interface plugin="${prefix}/rm_calibration_controllers_plugins.xml"/>
    </export>
</package>
