<?xml version="1.0"?>
<package format="2">
    <name>rm_chassis_controllers</name>
    <version>0.1.2</version>
    <description>RoboMaster standard robot Chassis controller</description>
    <maintainer email="liaoqiayuan@gmail.com">Qiayuan Liao</maintainer>
    <license>BSD</license>
    <!--  <url type="website">https://github.com/ethz-asl/ros_best_practices</url>-->
    <!--  <url type="bugtracker">https://github.com/ethz-asl/ros_best_practices/issues</url>-->
    <author email="liaoqiayuan@gmail.com">Qiayuan Liao</author>

    <!-- buildtool_depend: dependencies of the build process -->
    <buildtool_depend>catkin</buildtool_depend>
    <!-- depend: build, export, and execution dependency -->
    <depend>roscpp</depend>
    <depend>roslint</depend>

    <depend>rm_msgs</depend>
    <depend>rm_common</depend>

    <depend>nav_msgs</depend>
    <depend>pluginlib</depend>
    <depend>hardware_interface</depend>
    <depend>controller_interface</depend>
    <depend>forward_command_controller</depend>
    <depend>realtime_tools</depend>
    <depend>control_toolbox</depend>
    <depend>effort_controllers</depend>
    <depend>tf2</depend>
    <depend>tf2_geometry_msgs</depend>
    <depend>angles</depend>

    <exec_depend>imu_sensor_controller</exec_depend>
    <exec_depend>robot_localization</exec_depend>

    <export>
        <controller_interface plugin="${prefix}/rm_chassis_controllers_plugins.xml"/>
    </export>
</package>
