<?xml version="1.0"?>
<package format="2">
    <name>rm_chassis_controllers</name>
    <version>0.1.11</version>
    <description>RoboMaster standard robot Chassis controller</description>
    <maintainer email="liaoqiayuan@gmail.com">Qiayuan Liao</maintainer>
    <license>BSD</license>
    <!--  <url type="website">https://github.com/ethz-asl/ros_best_practices</url>-->
    <!--  <url type="bugtracker">https://github.com/ethz-asl/ros_best_practices/issues</url>-->
    <author email="liaoqiayuan@gmail.com">Qiayuan Liao</author>

    <!-- buildtool_depend: dependencies of the build process -->
    <buildtool_depend>catkin</buildtool_depend>
    <!-- depend: build, export, and execution dependency -->
    <depend>roscpp</depend>

    <depend>rm_common</depend>

    <depend>controller_interface</depend>
    <depend>effort_controllers</depend>
    <depend>tf2_geometry_msgs</depend>
    <depend>nav_msgs</depend>
    <depend>angles</depend>

    <exec_depend>robot_localization</exec_depend>

    <export>
        <controller_interface plugin="${prefix}/rm_chassis_controllers_plugins.xml"/>
    </export>
</package>
