<?xml version="1.0"?>
<package format="2">
  <name>rm_controllers</name>
  <version>0.1.2</version>
  <description>Meta package that contains package for RoboMaster.</description>
  <maintainer email="liaoqiayuan@gmail.com">Qiayuan Liao</maintainer>

  <license>BSD</license>

  <url type="repository">https://github.com/rm-controls/rm_controllers</url>
  <url type="bugtracker">https://github.com/rm-controls/rm_controllers/issues</url>

  <author email="liaoqiayuan@gmail.com">Qiayuan Liao</author>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>robot_state_controller</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>
