<?xml version="1.0"?>
<package format="2">
  <name>rm_controllers</name>
  <version>0.1.11</version>
  <description>Meta package that contains package for RoboMaster.</description>
  <maintainer email="liaoqiayuan@gmail.com">Qiayuan Liao</maintainer>

  <license>BSD</license>

  <url type="repository">https://github.com/rm-controls/rm_controllers</url>
  <url type="bugtracker">https://github.com/rm-controls/rm_controllers/issues</url>

  <author email="liaoqiayuan@gmail.com">Qiayuan Liao</author>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>gpio_controller</exec_depend>
  <exec_depend>mimic_joint_controller</exec_depend>
  <exec_depend>rm_calibration_controllers</exec_depend>
  <exec_depend>rm_chassis_controllers</exec_depend>
  <exec_depend>rm_gimbal_controllers</exec_depend>
  <exec_depend>rm_orientation_controller</exec_depend>
  <exec_depend>rm_shooter_controllers</exec_depend>
  <exec_depend>robot_state_controller</exec_depend>
  <exec_depend>tof_radar_controller</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>
